--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ highlight:
 
 #### Markdown Processors
 ## 'redcarpet' is unsupported on GitHub Pages now.
-markdown: kramdown
+markdown: redcarpet
 kramdown:
     input: GFM
 
