--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ highlight:
 
 #### Markdown Processors
 ## 'redcarpet' is unsupported on GitHub Pages now.
-markdown: redcarpet
-kramdown:
+markdown: typora
+typora:
     input: GFM
 
 # Default Attributes
