--- a/_config.yml
+++ b/_config.yml
@@ -550,6 +550,14 @@ calendar:
   singleEvents: true
   maxResults: 250
 
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
+
 # Algolia Search
 algolia_search:
   enable: false
