--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: 神奇的博客
+title: Pyrans' Blog
 subtitle: Frozen three feet Day cold
 description: Frozen three feet Day cold
 author: Pyrans
